force-app/main/default/objects/KimbleOne__UsageAdjustment__c/KimbleOne__UsageAdjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Usage Adjustment</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>