force-app/main/default/objects/KimbleOne__UsageAdjustment__c/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <label>Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Usage Adjustments</relationshipLabel>
    <relationshipName>UsageAdjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>