force-app/main/default/objects/KimbleOne__UsageAdjustment__c/fields/KimbleOne__AdjustmentUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AdjustmentUsage__c</fullName>
    <label>Adjustment</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>