force-app/main/default/objects/KimbleOne__UsageAdjustment__c/fields/KimbleOne__ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovedDate__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>