force-app/main/default/objects/KimbleOne__UsageAdjustment__c/fields/KimbleOne__Status__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Status</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Usage Adjustments</relationshipLabel>
    <relationshipName>UsageAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>