force-app/main/default/objects/KimbleOne__UsageAdjustment__c/fields/KimbleOne__UsageAdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageAdjustmentReason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reason</label>
    <referenceTo>KimbleOne__UsageAdjustmentReason__c</referenceTo>
    <relationshipLabel>Usage Adjustments</relationshipLabel>
    <relationshipName>UsageAdjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>