force-app/main/default/objects/KimbleOne__UsageAdjustment__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ActivityAssignment__c</columns>
    <columns>KimbleOne__UsageAdjustmentReason__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>